# m3u-proxy

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README-EPG-Generator-Process.md  README-M3U-Generator-Process.md  README-Pipeline-Generation-Process.md  README-Relay.md  README.md  REFACTORING.md  TODO-REMEDIATION-PLAN.md  build-container.sh  clippy.toml  config copy.toml  config-example-memory-strategies.toml  config-example.toml  config-min.toml  config.circuit-breaker-example.toml  config.example.toml  deny.toml  docker-compose.yml  entrypoint.sh  justfile  k8s-deployment-example.yaml  push-container.sh  test-gpu.sh
crates/m3u-proxy/: Cargo.toml  WASM_PLUGIN_ARCHITECTURE.md  WASM_PLUGIN_DEVELOPMENT.md  build.rs  config.example.toml  config.test.toml  health.rs.backup
crates/m3u-proxy/benches/: repository_benchmarks.rs
crates/m3u-proxy/docs/: MEMORY_HANDLING.md
crates/m3u-proxy/examples/: retry_example.rs  sample_data_demo.rs
crates/m3u-proxy/migrations/: 001_initial_schema.sql  002_defaults.sql  003_enhanced_metrics.sql  003_enhanced_relay_profiles.sql  003_epg_channel_display_names.sql  003_last_known_codecs.sql  004_remove_unused_epg_tables.sql  004_update_relay_profiles.sql  005_normalize_relay_profile_uuids.sql  005_remove_filter_starting_channel.sql
crates/m3u-proxy/plugins/chunked-source-loader/: Cargo.toml  build.sh
crates/m3u-proxy/plugins/library-test-plugin/: Cargo.toml  plugin.toml
crates/m3u-proxy/plugins/passthrough-plugin/: Cargo.toml  build.sh  plugin.toml
crates/m3u-proxy/proptest-regressions/: expression_parser.txt
crates/m3u-proxy/proptest-regressions/utils/: database_retry.txt
crates/m3u-proxy/src/: assets.rs  data_mapping.rs  expression_parser.rs  field_registry.rs  filter_parser.rs  lib.rs  main.rs  test_xmltv_fields.rs
crates/m3u-proxy/src/config/: defaults.rs  duration_serde.rs  file_categories.rs  mod.rs  plugin_resolver.rs
crates/m3u-proxy/src/data_mapping/: engine.rs  mod.rs  service.rs
crates/m3u-proxy/src/database/: channel_mapping.rs  epg_sources.rs  filters.rs  linked_xtream.rs  mod.rs  stream_sources.rs  url_linking.rs
crates/m3u-proxy/src/docs/: orchestrator-data-loading.md
crates/m3u-proxy/src/entities/: channel_epg_mapping.rs  channel_relay_configs.rs  channels.rs  data_mapping_rules.rs  epg_channels.rs  epg_programs.rs  epg_sources.rs  filters.rs  last_known_codecs.rs  linked_xtream_sources.rs  logo_assets.rs  migration_notes.rs  mod.rs  prelude.rs  proxy_epg_sources.rs  proxy_filters.rs  proxy_generations.rs  proxy_sources.rs  relay_events.rs  relay_profiles.rs  relay_runtime_status.rs  stream_proxies.rs  stream_sources.rs
crates/m3u-proxy/src/errors/: mod.rs  types.rs
crates/m3u-proxy/src/expression/: mod.rs
crates/m3u-proxy/src/ingestor/: epg_with_accumulator_example.rs  ingest_epg.rs  ingest_m3u.rs  ingest_stream.rs  ingest_xtream.rs  ingestion_accumulator.rs  mod.rs  scheduler.rs  simple_accumulator_example.rs  state_manager.rs  strategy_examples.rs
crates/m3u-proxy/src/job_scheduling/: api.rs  job_executor.rs  job_queue.rs  job_queue_runner.rs  job_scheduler.rs  mod.rs  types.rs
crates/m3u-proxy/src/logo_assets/: mod.rs  service.rs  storage.rs
crates/m3u-proxy/src/metrics/: mod.rs
crates/m3u-proxy/src/models/: channel.rs  data_mapping.rs  epg_source.rs  filter.rs  last_known_codec.rs  linked_xtream.rs  logo_asset.rs  mod.rs  relay.rs  stream_proxy.rs  stream_source.rs
crates/m3u-proxy/src/observability/: mod.rs
crates/m3u-proxy/src/pipeline/: accumulator.rs  accumulator_usage_example.rs  buffered_iterator.rs  chunk_manager.rs  error.rs  eval_context.rs  generic_iterator.rs  immutable_sources.rs  iterator_registry.rs  iterator_traits.rs  iterator_types.rs  mod.rs  orchestrator.rs  plugin_output_iterator.rs  rolling_buffer_iterator.rs  traits.rs
crates/m3u-proxy/src/plugins/: mod.rs  wasm_host_factory.rs
crates/m3u-proxy/src/proxy/: adaptive_pipeline.rs  chunked_pipeline.rs  chunked_strategies.rs  config_resolver.rs  epg_generator.rs  filter_engine.rs  generator.rs  http_stream.rs  mod.rs  mod.rs.backup  native_pipeline.rs  pipeline.rs  robust_streaming.rs  session_tracker.rs  simple_strategies.rs  stage_contracts.rs  stage_strategy.rs  streaming_pipeline.rs  streaming_stages.rs  wasm_examples.rs  wasm_host_interface.rs  wasm_plugin.rs  wasm_plugin_test.rs
crates/m3u-proxy/src/repositories/: channel.rs  epg_program.rs  epg_source.rs  filter.rs  health.rs  mod.rs  relay.rs  relay.rs.backup  retry_wrapper.rs  stream_proxy.rs  stream_source.rs  traits.rs  url_linking.rs
crates/m3u-proxy/src/runtime_settings/: mod.rs
crates/m3u-proxy/src/services/: channel.rs  circuit_breaker_manager.rs  circuit_breaker_pool.rs  connection_limiter.rs  cyclic_buffer.rs  data_mapping.rs  embedded_font.rs  epg_source_service.rs  error_fallback.rs  ffmpeg_command_builder.rs  ffmpeg_wrapper.rs  file_categories.rs  filter.rs  logo_cache_maintenance.rs  logo_cache_scanner.rs  metrics_housekeeper.rs  mod.rs  probe_persistence.rs  progress_service.rs  proxy_regeneration.rs  relay_config_resolver.rs  relay_manager.rs  sandboxed_file.rs  sandboxed_file_trait.rs  source_linking_service.rs  stream_prober.rs  stream_proxy.rs  stream_source.rs  stream_source_service.rs  traits.rs  url_linking_service.rs
crates/m3u-proxy/src/sources/: factory.rs  m3u.rs  mod.rs  traits.rs  xmltv_epg.rs  xtream.rs  xtream_epg.rs
crates/m3u-proxy/tests/: api_security_validation.rs  data_mapping_api_integration.rs  expression_validation_alias.rs  expression_validation_canonical.rs  file_manager_duplicate_detection.rs  migration_name_guard.rs  repository_comprehensive.rs  seaorm_comprehensive_integration.rs  seaorm_multi_database.rs  sql_injection_security.rs
crates/sandboxed-file-manager/: Cargo.toml
crates/sandboxed-file-manager/examples/: mime_type_validation.rs  std_fs_comparison.rs
crates/sandboxed-file-manager/src/: error.rs  file_types.rs  lib.rs  manager.rs  policy.rs  security.rs
examples/wasm-plugins/chunked-source-loader/: Cargo.toml  build.sh  test.sh
(+496 files in other folders)
