[workspace]
members = [
    "crates/m3u-proxy",
    "crates/sandboxed-file-manager",
]
exclude = []
resolver = "3"

[workspace.package]
version = "0.0.2"

[workspace.dependencies]
sandboxed-file-manager = { path = "crates/sandboxed-file-manager" }

# Shared dependencies for the workspace
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
