[package]
name = "m3u-proxy"
version = "0.0.1"
edition = "2024"
authors = ["John Mylchreest <jmylchreest@gmail.com>"]
description = "A modern M3U proxy service with filtering and source management"
repository = "https://github.com/jmylchreest/m3u-proxy"
license = "MIT"
keywords = ["m3u", "iptv", "proxy", "streaming", "xtream"]
categories = ["multimedia", "web-programming", "network-programming"]

[[bin]]
name = "m3u-proxy"
path = "src/main.rs"


[features]
default = []

[lib]
name = "m3u_proxy"
path = "src/lib.rs"

[dependencies]
sandboxed-file-manager = { path = "../sandboxed-file-manager" }
anyhow = "1.0"
axum = { version = "0.7", features = ["macros", "multipart"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.8"
clap = { version = "4.4", features = ["derive"] }
cron = "0.12"
env_logger = "0.10"
fastrand = "2.0"
quick-xml = { version = "0.31", features = ["serialize"] }
regex = "1.10"
rust-embed = "8.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "uuid",
    "macros",
] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ulid = "1.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
async-trait = "0.1"
bytes = "1.5"
tempfile = "3.8"
async-stream = "0.3"
futures = "0.3"
futures-util = "0.3"
walkdir = "2.4"
humantime = "2.1"
once_cell = "1.19"
rayon = "1.8"
image = "0.24"
sha2 = "0.10"
sysinfo = "0.29"
hex = "0.4"
url = "2.4"
urlencoding = "2.1"
xmltv = "0.9"
mime = "0.3"
mime_guess = "2.0"
axum-extra = { version = "0.9", features = ["typed-header"] }
include_dir = "0.7"

[build-dependencies]
