[package]
name = "m3u-proxy"
version = "0.0.2"
edition = "2024"
authors = ["John Mylchreest <jmylchreest@gmail.com>"]
description = "A modern M3U proxy service with filtering and source management"
repository = "https://github.com/jmylchreest/m3u-proxy"
license = "MIT"
keywords = ["m3u", "iptv", "proxy", "streaming", "xtream"]
categories = ["multimedia", "web-programming", "network-programming"]

[[bin]]
name = "m3u-proxy"
path = "src/main.rs"


[features]
default = []

[lib]
name = "m3u_proxy"
path = "src/lib.rs"

[dependencies]
sandboxed-file-manager = { path = "../sandboxed-file-manager" }
anyhow = "1.0.98"
async-stream = "0.3"
axum = { version = "0.8", features = ["macros", "multipart"] }
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4.5", features = ["derive"] }
cron = "0.15"
env_logger = "0.11"
fastrand = "2.3"
quick-xml = { version = "0.38", features = ["serialize"] }
regex = "1.11"
rust-embed = "8.7"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
toml = "0.9"
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "sqlite",
    "chrono",
    "uuid",
    "macros",
] }
thiserror = "2.0"
tokio = { version = "1.46", features = ["full"] }
tokio-util = "0.7.15"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
ulid = "1.1"
uuid = { version = "1.17", features = ["v4", "serde"] }
async-trait = "0.1"
bytes = "1.5"
tempfile = "3.8"
futures = "0.3"
futures-util = "0.3"
walkdir = "2.4"
humantime = "2.1"
once_cell = "1.19"
rayon = "1.8"
image = "0.24"
sha2 = "0.10"
sysinfo = "0.29"
hex = "0.4"
url = "2.4"
urlencoding = "2.1"
mime = "0.3"
mime_guess = "2.0"
axum-extra = { version = "0.10", features = ["typed-header"] }
include_dir = "0.7"
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = { version = "0.2.0" }
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }

[build-dependencies]
