[package]
name = "m3u-proxy"
version = "0.1.4-dev.1.gb4d9229"
edition = "2024"
authors = ["John Mylchreest <jmylchreest@gmail.com>"]
description = "A modern M3U proxy service with filtering and source management"
repository = "https://github.com/jmylchreest/m3u-proxy"
license = "MIT"
keywords = ["m3u", "iptv", "proxy", "streaming", "xtream"]
categories = ["multimedia", "web-programming", "network-programming"]

[[bin]]
name = "m3u-proxy"
path = "src/main.rs"


[features]
default = ["compression-gzip"]

# Compression format support - enable only what you need for M3U/XMLTV content
compression-gzip = ["flate2"]                                                 # Most common format
compression-bzip2 = ["bzip2"]                                                 # Sometimes used for archives
compression-xz = ["xz2"]                                                      # Sometimes used for archives
compression-all = ["compression-gzip", "compression-bzip2", "compression-xz"]

[lib]
name = "m3u_proxy"
path = "src/lib.rs"

[dependencies]
sandboxed-file-manager = { path = "../sandboxed-file-manager" }
anyhow = "1.0.99"
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros", "multipart"] }
base64 = "0.22.1"
chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4.5", features = ["derive"] }
cron = "0.15"
env_logger = "0.11"
quick-xml = { version = "0.38", features = ["serialize"] }
regex = "1.11"
rust-embed = "8.7"
reqwest = { version = "0.12", features = [
    "json",
    "stream",
    "rustls-tls",
], default-features = false }
rssafecircuit = "0.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
toml = "0.9"
figment = { version = "0.10", features = ["toml", "env"] }
# SeaORM for database abstraction
sea-orm = { version = "1.1", features = [
    "sqlx-sqlite",
    "sqlx-postgres",
    "sqlx-mysql",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-uuid",
    "mock",
] }
sea-orm-migration = "1.1"
strum = { version = "0.26", features = ["derive"] }

thiserror = "2.0"
tokio = { version = "1.47", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "fs",
    "process",
    "net",
    "io-util",
    "signal",
] }
tokio-util = "0.7.16"
tokio-stream = { version = "0.1", features = ["sync"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
bytes = "1.10"
tempfile = "3.21"
futures = "0.3"
futures-util = "0.3"
humantime = "2.2"
image = { version = "0.24", default-features = false, features = [
    "png",
    "jpeg",
    "gif",
    "webp",
] }
sha2 = "0.10"
sysinfo = "0.29"
hex = "0.4"
url = "2.5"
urlencoding = "2.1"
axum-extra = { version = "0.10", features = ["typed-header"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = { version = "0.2.0" }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum", "vendored"] }
infer = "0.16"
flate2 = { version = "1.1", optional = true }
bzip2 = { version = "0.4", optional = true }
xz2 = { version = "0.1", optional = true }

[dev-dependencies]
# Testing framework and utilities
tokio-test = "0.4"
proptest = "1.7"
criterion = { version = "0.5", features = ["html_reports"] }
rstest = "0.22"
serial_test = "3.2"
mockall = "0.12"
axum-test = "15.7"

# Additional test utilities
test-log = "0.2"
env_logger = "0.11"
tracing-test = "0.2"

# SeaORM CLI for entity generation
sea-orm-cli = "1.1"

[[bench]]
name = "repository_benchmarks"
harness = false

[build-dependencies]
toml = "0.9"
