[package]
name = "library-test-plugin"
version = "0.1.0"
edition = "2021"
resolver = "3"


[lib]
crate-type = ["cdylib"]

[dependencies]
# Core serialization (already proven to work)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["serde"] }
libc = "0.2"

# WASM-safe libraries (no getrandom dependency)
regex = "1.10"
indexmap = { version = "2.0", default-features = false, features = ["std"] }
smallvec = "1.11"
arrayvec = "0.7"
itertools = { version = "0.12", default-features = false }

# Date/time (WASM-safe subset)
chrono = { version = "0.4", default-features = false, features = ["serde", "alloc"] }

# Only crypto that doesn't need random (no getrandom)
sha2 = { version = "0.10", default-features = false }

[profile.release]
lto = true
opt-level = "s"
panic = "abort"