[package]
name = "passthrough-plugin"
version = "0.0.1"
edition = "2024"
resolver = "3"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["serde"] }
libc = "0.2"

[profile.release]
lto = true
opt-level = "s"
panic = "abort"
